Salesforce Training org/objects/Web_Service_Log__c.object
<CustomObject>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Message_Log__c</fullName>
        <label>Request Message Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Message__c</fullName>
        <label>Request Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Sent__c</fullName>
        <label>Request Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_Message_Log__c</fullName>
        <label>Response Message Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <label>Response Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Recieved__c</fullName>
        <label>Response Recieved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Web_Service_Class__c</fullName>
        <label>Web Service Class</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Service_Method__c</fullName>
        <label>Web Service Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Service_Name__c</fullName>
        <label>Web Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Web Service Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Web_Service_Method__c</columns>
        <columns>Web_Service_Class__c</columns>
        <columns>Web_Service_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WSL-{0000}</displayFormat>
        <label>Web Service Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Service Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>